Implement readStationName with SIMD 256bit